force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
    <description>A singular task that needs to be done. Assigned to a project.</description>
    <label>Project Task</label>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>