force-app/main/default/objects/Project_Task__c/fields/Assigned_Project__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project that this task is part of.</description>
    <inlineHelpText>Project that this task is part of.</inlineHelpText>
    <label>Assigned Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>