force-app/main/default/objects/Project_Task__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date that this task should be completed by.</description>
    <inlineHelpText>Date that this task should be completed by.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>