force-app/main/default/objects/Project_Task__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Estimated cost of this task.</description>
    <inlineHelpText>Estimated cost of this task.</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>