force-app/main/default/objects/Project_Task__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <description>Detailed description of this task.</description>
    <inlineHelpText>Detailed description of this task.</inlineHelpText>
    <label>Task Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>