force-app/main/default/objects/Project_Task__c/fields/Task_Handler__c.field-meta.xml
<CustomField>
    <fullName>Task_Handler__c</fullName>
    <defaultValue>&quot;Internal&quot;</defaultValue>
    <description>Assigned handler of this task.</description>
    <inlineHelpText>Assigned handler of this task.</inlineHelpText>
    <label>Task Handler</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Handler_Options</valueSetName>
    </valueSet>
</CustomField>