force-app/main/default/objects/Project_Task__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <description>Status of the progress on this task.</description>
    <inlineHelpText>Status of the progress on this task.</inlineHelpText>
    <label>Task Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Status_Options</valueSetName>
    </valueSet>
</CustomField>